--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <p>User win: <span id="userwin"></span></p>
-    <p>Computer win: <span id="computerwin"></span></p>
-    <p id="outcome"></p>
-    <script src="script.js"></script>
+    <div>
+        <p>User win: <span id="userwin"></span></p>
+        <p>Computer win: <span id="computerwin"></span></p>
+        <p id="outcome"></p>
+    </div>
+    <div>
+        <button id="Rock">Rock</button>
+        <button id="Paper">Paper</button>
+        <button id="Scissors">Scissors</button>
+    </div>
+    
 </body>
 </html>
